# Chatty

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  playwright.config.ts  pyproject.toml
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  main.py
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users.py  002_create_rooms.py  003_room_members.py  004_create_messages.py  005_read_receipts.py  006_reactions.py  007_message_attachments.py  008_threads.py  009_message_indexes.py
backend/app/api/: deps.py
backend/app/core/: config.py  logging.py  security.py
backend/app/crud/: message.py  reaction.py  room.py  user.py
backend/app/db/: base.py  session.py
backend/app/middleware/: rate_limit.py
backend/app/models/: message.py  notification.py  reaction.py  read_receipt.py  room.py  room_member.py  user.py
backend/app/schemas/: message.py  room.py  user.py
backend/app/services/: cache.py  link_preview.py  notifications.py  room_service.py  storage.py
backend/app/ws/: connection_manager.py  events.py  router.py
backend/tests/: test_auth.py  test_files.py  test_messages.py  test_reactions.py  test_rooms.py  test_storage.py  test_users.py  test_ws.py
docs/: architecture.md  deploy.md  env.md  setup.md  websocket.md
e2e/: chat.spec.ts  reconnect.spec.ts
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts
frontend/src/: index.css  main.tsx  router.tsx
(+50 files in other folders)
