[tool.poetry]
name = "chatty-backend"
version = "1.0.0"
description = "Real-time chat backend"
authors = ["Chatty Dev <dev@chatty.app>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
redis = "^5.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic-settings = "^2.2.1"
pydantic = {extras = ["email"], version = "^2.7.1"}
python-multipart = "^0.0.9"
httpx = "^0.27.0"
aiofiles = "^23.2.1"
boto3 = "^1.34.0"
beautifulsoup4 = "^4.12.3"
sentry-sdk = {extras = ["fastapi"], version = "^2.0.0"}
prometheus-fastapi-instrumentator = "^7.0.0"
slowapi = "^0.1.9"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
factory-boy = "^3.3.0"
black = "^24.4.2"
ruff = "^0.4.4"
mypy = "^1.10.0"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
